before changing to all functions

--- a/AnalisePeriodicidadeAgregadaKFold.ipynb
+++ b/AnalisePeriodicidadeAgregadaKFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,27 +24,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>período</th>\n",
+       "      <th>função</th>\n",
+       "      <th>carga</th>\n",
+       "      <th>apps</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>método</th>\n",
+       "      <th>nmae</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.121974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.118121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.189637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.173702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.163514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.141126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.133014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.119794</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     período função           carga       apps     feature método      nmae\n",
+       "144      256  média    PeriodicLoad  SingleApp  DispFrames     RT  0.121974\n",
+       "145      256  média    PeriodicLoad  SingleApp  DispFrames     RF  0.118121\n",
+       "48       256  média    PeriodicLoad   BothApps  DispFrames     RT  0.189637\n",
+       "49       256  média    PeriodicLoad   BothApps  DispFrames     RF  0.173702\n",
+       "96       256  média  FlashcrowdLoad  SingleApp  DispFrames     RT  0.163514\n",
+       "97       256  média  FlashcrowdLoad  SingleApp  DispFrames     RF  0.141126\n",
+       "0        256  média  FlashcrowdLoad   BothApps  DispFrames     RT  0.133014\n",
+       "1        256  média  FlashcrowdLoad   BothApps  DispFrames     RF  0.119794"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std']).reset_index()\n",
-    "group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std']).reset_index()"
+    "data[(data['período'] == 256) & (data['função'] == 'média')].sort_values(by=['carga', 'apps', 'método'], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "máximo - 2: 0.102 ± 0.016\n",
+      "média - 2: 0.103 ± 0.016\n",
+      "mínimo - 2: 0.102 ± 0.016\n",
+      "máximo - 4: 0.107 ± 0.016\n",
+      "média - 4: 0.107 ± 0.015\n",
+      "mínimo - 4: 0.107 ± 0.016\n",
+      "máximo - 8: 0.111 ± 0.015\n",
+      "média - 8: 0.112 ± 0.017\n",
+      "mínimo - 8: 0.112 ± 0.017\n",
+      "máximo - 16: 0.110 ± 0.015\n",
+      "média - 16: 0.111 ± 0.016\n",
+      "mínimo - 16: 0.109 ± 0.014\n",
+      "máximo - 32: 0.112 ± 0.013\n",
+      "média - 32: 0.114 ± 0.017\n",
+      "mínimo - 32: 0.112 ± 0.015\n",
+      "máximo - 64: 0.118 ± 0.011\n",
+      "média - 64: 0.122 ± 0.012\n",
+      "mínimo - 64: 0.117 ± 0.010\n",
+      "máximo - 128: 0.139 ± 0.022\n",
+      "média - 128: 0.131 ± 0.023\n",
+      "mínimo - 128: 0.130 ± 0.021\n",
+      "máximo - 256: 0.148 ± 0.028\n",
+      "média - 256: 0.145 ± 0.023\n",
+      "mínimo - 256: 0.140 ± 0.022\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as st\n",
+    "\n",
+    "group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std', 'count']).reset_index()\n",
+    "#group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std', 'count']).reset_index()\n",
+    "# Compute standard error\n",
+    "group['se'] = group['std'] / np.sqrt(group['count'])\n",
+    "\n",
+    "# Compute 95% confidence interval\n",
+    "group['ci'] = group.apply(lambda row: st.t.ppf(0.975, df=row['count']-1) * row['se'], axis=1)\n",
+    "\n",
+    "# Print results as \"mean ± ci\"\n",
+    "for _, row in group.iterrows():\n",
+    "    print(f\"{row['função']} - {row['período']}: {row['mean']:.3f} ± {row['ci']:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0: 0.102 ± 0.008\n",
+      "4.0: 0.107 ± 0.008\n",
+      "8.0: 0.111 ± 0.008\n",
+      "16.0: 0.110 ± 0.007\n",
+      "32.0: 0.113 ± 0.007\n",
+      "64.0: 0.119 ± 0.006\n",
+      "128.0: 0.134 ± 0.011\n",
+      "256.0: 0.144 ± 0.012\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as st\n",
+    "\n",
+    "group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std', 'count']).reset_index()\n",
+    "# Compute standard error\n",
+    "group['se'] = group['std'] / np.sqrt(group['count'])\n",
+    "\n",
+    "# Compute 95% confidence interval using t-student distribution\n",
+    "group['ci'] = group.apply(lambda row: st.t.ppf(0.975, df=row['count']-1) * row['se'], axis=1)\n",
+    "\n",
+    "# Print results as \"mean ± ci\"\n",
+    "for _, row in group.iterrows():\n",
+    "  print(f\"{row['período']}: {row['mean']:.3f} ± {row['ci']:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "group['std'] = round(100*group['std'], 0)\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "amostra = group[]\n",
+    "media = np.mean(amostra)\n",
+    "desvio_padrao = np.std(amostra)\n",
+    "graus_liberdade = len(amostra)\n",
+    "group['ic'] = stats.t.interval(0.95, graus_liberdade, loc=media, scale=desvio_padrao / np.sqrt(len(amostra)))\n",
     "group['mean'] = round(100*group['mean'], 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +362,7 @@
        "7      256  14.0  3.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,18 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std']).reset_index()\n",
-    "group['std'] = round(100*group['std'], 0)\n",
-    "group['mean'] = round(100*group['mean'], 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -192,58 +405,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>10.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>8</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>16</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>32</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>15</th>\n",
        "      <td>64</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>18</th>\n",
        "      <td>128</td>\n",
-       "      <td>média</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>21</th>\n",
        "      <td>256</td>\n",
-       "      <td>média</td>\n",
+       "      <td>máximo</td>\n",
        "      <td>15.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -252,24 +465,24 @@
        "</div>"
       ],
       "text/plain": [
-       "    período função  mean  std\n",
-       "1         2  média  10.0  2.0\n",
-       "4         4  média  11.0  2.0\n",
-       "7         8  média  11.0  2.0\n",
-       "10       16  média  11.0  2.0\n",
-       "13       32  média  11.0  2.0\n",
-       "16       64  média  12.0  1.0\n",
-       "19      128  média  13.0  3.0\n",
-       "22      256  média  15.0  3.0"
+       "    período  função  mean  std\n",
+       "0         2  máximo  10.0  2.0\n",
+       "3         4  máximo  11.0  2.0\n",
+       "6         8  máximo  11.0  2.0\n",
+       "9        16  máximo  11.0  2.0\n",
+       "12       32  máximo  11.0  2.0\n",
+       "15       64  máximo  12.0  1.0\n",
+       "18      128  máximo  14.0  3.0\n",
+       "21      256  máximo  15.0  3.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "group[group['função'] == 'média']"
+    "group[group['função'] == 'máximo']"
    ]
   },
   {
