--- a/AnalisePeriodicidadeDistribFsKFold.ipynb
+++ b/AnalisePeriodicidadeDistribFsKFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,202 +49,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>256</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.097070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>256</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.096573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>128</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.089713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>128</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.111593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>64</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.096481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>64</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.113528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>32</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.105604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>32</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.096752</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>16</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.103791</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>16</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.097527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>46</th>\n",
        "      <td>8</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
        "      <td>DispFrames</td>\n",
        "      <td>RT</td>\n",
-       "      <td>0.119132</td>\n",
+       "      <td>0.108752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>47</th>\n",
        "      <td>8</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>BothApps</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
        "      <td>DispFrames</td>\n",
        "      <td>RF</td>\n",
-       "      <td>0.106738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>256</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.204203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>256</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.172550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>128</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.146962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>128</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.138122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>64</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.130404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>64</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.132853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>32</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.142185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>32</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.134226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>16</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.149202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>16</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>BothApps</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.139785</td>\n",
+       "      <td>0.098759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -265,96 +85,6 @@
        "      <td>0.146076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>256</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.094961</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>256</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.103336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>128</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.111554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>128</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.113371</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>64</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.128565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>64</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.116789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>32</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.117875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>32</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.106279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>16</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.115947</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>16</td>\n",
-       "      <td>FlashcrowdLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.107709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>8</td>\n",
        "      <td>FlashcrowdLoad</td>\n",
@@ -373,112 +103,22 @@
        "      <td>0.107388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>256</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.149745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>256</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.120337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>128</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.101989</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>128</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.099271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>64</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.109231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>64</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.096093</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>32</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.107789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>32</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.101618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>16</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.110085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>16</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
-       "      <td>DispFrames</td>\n",
-       "      <td>RF</td>\n",
-       "      <td>0.103062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>10</th>\n",
        "      <td>8</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
        "      <td>DispFrames</td>\n",
        "      <td>RT</td>\n",
-       "      <td>0.108752</td>\n",
+       "      <td>0.119132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
+       "      <th>11</th>\n",
        "      <td>8</td>\n",
-       "      <td>PeriodicLoad</td>\n",
-       "      <td>SingleApp</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
        "      <td>DispFrames</td>\n",
        "      <td>RF</td>\n",
-       "      <td>0.098759</td>\n",
+       "      <td>0.106738</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -486,63 +126,56 @@
       ],
       "text/plain": [
        "    período           carga       apps     feature método      nmae\n",
-       "0       256  FlashcrowdLoad   BothApps  DispFrames     RT  0.097070\n",
-       "1       256  FlashcrowdLoad   BothApps  DispFrames     RF  0.096573\n",
-       "2       128  FlashcrowdLoad   BothApps  DispFrames     RT  0.089713\n",
-       "3       128  FlashcrowdLoad   BothApps  DispFrames     RF  0.111593\n",
-       "4        64  FlashcrowdLoad   BothApps  DispFrames     RT  0.096481\n",
-       "5        64  FlashcrowdLoad   BothApps  DispFrames     RF  0.113528\n",
-       "6        32  FlashcrowdLoad   BothApps  DispFrames     RT  0.105604\n",
-       "7        32  FlashcrowdLoad   BothApps  DispFrames     RF  0.096752\n",
-       "8        16  FlashcrowdLoad   BothApps  DispFrames     RT  0.103791\n",
-       "9        16  FlashcrowdLoad   BothApps  DispFrames     RF  0.097527\n",
-       "10        8  FlashcrowdLoad   BothApps  DispFrames     RT  0.119132\n",
-       "11        8  FlashcrowdLoad   BothApps  DispFrames     RF  0.106738\n",
-       "12      256    PeriodicLoad   BothApps  DispFrames     RT  0.204203\n",
-       "13      256    PeriodicLoad   BothApps  DispFrames     RF  0.172550\n",
-       "14      128    PeriodicLoad   BothApps  DispFrames     RT  0.146962\n",
-       "15      128    PeriodicLoad   BothApps  DispFrames     RF  0.138122\n",
-       "16       64    PeriodicLoad   BothApps  DispFrames     RT  0.130404\n",
-       "17       64    PeriodicLoad   BothApps  DispFrames     RF  0.132853\n",
-       "18       32    PeriodicLoad   BothApps  DispFrames     RT  0.142185\n",
-       "19       32    PeriodicLoad   BothApps  DispFrames     RF  0.134226\n",
-       "20       16    PeriodicLoad   BothApps  DispFrames     RT  0.149202\n",
-       "21       16    PeriodicLoad   BothApps  DispFrames     RF  0.139785\n",
+       "46        8    PeriodicLoad  SingleApp  DispFrames     RT  0.108752\n",
+       "47        8    PeriodicLoad  SingleApp  DispFrames     RF  0.098759\n",
        "22        8    PeriodicLoad   BothApps  DispFrames     RT  0.157754\n",
        "23        8    PeriodicLoad   BothApps  DispFrames     RF  0.146076\n",
-       "24      256  FlashcrowdLoad  SingleApp  DispFrames     RT  0.094961\n",
-       "25      256  FlashcrowdLoad  SingleApp  DispFrames     RF  0.103336\n",
-       "26      128  FlashcrowdLoad  SingleApp  DispFrames     RT  0.111554\n",
-       "27      128  FlashcrowdLoad  SingleApp  DispFrames     RF  0.113371\n",
-       "28       64  FlashcrowdLoad  SingleApp  DispFrames     RT  0.128565\n",
-       "29       64  FlashcrowdLoad  SingleApp  DispFrames     RF  0.116789\n",
-       "30       32  FlashcrowdLoad  SingleApp  DispFrames     RT  0.117875\n",
-       "31       32  FlashcrowdLoad  SingleApp  DispFrames     RF  0.106279\n",
-       "32       16  FlashcrowdLoad  SingleApp  DispFrames     RT  0.115947\n",
-       "33       16  FlashcrowdLoad  SingleApp  DispFrames     RF  0.107709\n",
        "34        8  FlashcrowdLoad  SingleApp  DispFrames     RT  0.112265\n",
        "35        8  FlashcrowdLoad  SingleApp  DispFrames     RF  0.107388\n",
-       "36      256    PeriodicLoad  SingleApp  DispFrames     RT  0.149745\n",
-       "37      256    PeriodicLoad  SingleApp  DispFrames     RF  0.120337\n",
-       "38      128    PeriodicLoad  SingleApp  DispFrames     RT  0.101989\n",
-       "39      128    PeriodicLoad  SingleApp  DispFrames     RF  0.099271\n",
-       "40       64    PeriodicLoad  SingleApp  DispFrames     RT  0.109231\n",
-       "41       64    PeriodicLoad  SingleApp  DispFrames     RF  0.096093\n",
-       "42       32    PeriodicLoad  SingleApp  DispFrames     RT  0.107789\n",
-       "43       32    PeriodicLoad  SingleApp  DispFrames     RF  0.101618\n",
-       "44       16    PeriodicLoad  SingleApp  DispFrames     RT  0.110085\n",
-       "45       16    PeriodicLoad  SingleApp  DispFrames     RF  0.103062\n",
-       "46        8    PeriodicLoad  SingleApp  DispFrames     RT  0.108752\n",
-       "47        8    PeriodicLoad  SingleApp  DispFrames     RF  0.098759"
+       "10        8  FlashcrowdLoad   BothApps  DispFrames     RT  0.119132\n",
+       "11        8  FlashcrowdLoad   BothApps  DispFrames     RF  0.106738"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data[data['período'] == 8].sort_values(by=['carga', 'apps', 'método'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0: 0.120 ± 0.018\n",
+      "16.0: 0.116 ± 0.016\n",
+      "32.0: 0.114 ± 0.014\n",
+      "64.0: 0.115 ± 0.012\n",
+      "128.0: 0.114 ± 0.016\n",
+      "256.0: 0.130 ± 0.035\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as st\n",
+    "\n",
+    "group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std', 'count']).reset_index()\n",
+    "# Compute standard error\n",
+    "group['se'] = group['std'] / np.sqrt(group['count'])\n",
+    "\n",
+    "# Compute 95% confidence interval using t-student distribution\n",
+    "group['ci'] = group.apply(lambda row: st.t.ppf(0.975, df=row['count']-1) * row['se'], axis=1)\n",
+    "\n",
+    "# Print results as \"mean ± ci\"\n",
+    "for _, row in group.iterrows():\n",
+    "  print(f\"{row['período']}: {row['mean']:.3f} ± {row['ci']:.3f}\")\n"
    ]
   },
   {
