--- a/AnalisePeriodicidadeTolaFSKFold.ipynb
+++ b/AnalisePeriodicidadeTolaFSKFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,173 @@
     "reference_split = pd.read_csv(f'naive_periodic_experiment/2025-01-06T19:07:27/minimal_with_univariate.csv', index_col=False)\n",
     "reference_tptt = pd.read_csv(f'naive_periodic_experiment_tptt/2025-01-26T20:09:01/minimal_with_univariate.csv', index_col=False)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>período</th>\n",
+       "      <th>carga</th>\n",
+       "      <th>apps</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>método</th>\n",
+       "      <th>nmae</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>256</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.104208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>256</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.092541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>256</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.177952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>256</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.141254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.076416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.079943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.101273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.098724</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    período           carga       apps     feature método      nmae\n",
+       "48      256    PeriodicLoad  SingleApp  DispFrames     RT  0.104208\n",
+       "49      256    PeriodicLoad  SingleApp  DispFrames     RF  0.092541\n",
+       "16      256    PeriodicLoad   BothApps  DispFrames     RT  0.177952\n",
+       "17      256    PeriodicLoad   BothApps  DispFrames     RF  0.141254\n",
+       "32      256  FlashcrowdLoad  SingleApp  DispFrames     RT  0.076416\n",
+       "33      256  FlashcrowdLoad  SingleApp  DispFrames     RF  0.079943\n",
+       "0       256  FlashcrowdLoad   BothApps  DispFrames     RT  0.101273\n",
+       "1       256  FlashcrowdLoad   BothApps  DispFrames     RF  0.098724"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['período'] == 256].sort_values(by=['carga', 'apps', 'método'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0: 0.110 ± 0.014\n",
+      "4.0: 0.115 ± 0.014\n",
+      "8.0: 0.118 ± 0.018\n",
+      "16.0: 0.121 ± 0.019\n",
+      "32.0: 0.118 ± 0.019\n",
+      "64.0: 0.118 ± 0.027\n",
+      "128.0: 0.112 ± 0.015\n",
+      "256.0: 0.109 ± 0.029\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as st\n",
+    "\n",
+    "group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std', 'count']).reset_index()\n",
+    "# Compute standard error\n",
+    "group['se'] = group['std'] / np.sqrt(group['count'])\n",
+    "\n",
+    "# Compute 95% confidence interval using t-distribution\n",
+    "group['ci'] = group.apply(lambda row: st.t.ppf(0.975, df=row['count']-1) * row['se'], axis=1)\n",
+    "\n",
+    "# Print results as \"mean ± ci\"\n",
+    "for _, row in group.iterrows():\n",
+    "  print(f\"{row['período']}: {row['mean']:.3f} ± {row['ci']:.3f}\")\n"
    ]
   },
   {
