--- a/AnaliseConjunta.ipynb
+++ b/AnaliseConjunta.ipynb
@@ -66,6 +66,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean ± CI: 0.105 ± 0.019\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "data_without = np.array([0.1, 0.09, 0.13, 0.12, 0.1, 0.09, 0.10, 0.08])\n",
+    "data_with_fs = np.array([0.14, 0.11, 0.12, 0.11, 0.11, 0.09, 0.10, 0.06])\n",
+    "\n",
+    "# Compute mean and standard error\n",
+    "mean = np.mean(data_with_fs)\n",
+    "std = np.std(data_with_fs, ddof=1)\n",
+    "se = std / np.sqrt(len(data_with_fs))\n",
+    "\n",
+    "# Compute 95% confidence interval using t-distribution\n",
+    "t_score = st.t.ppf(0.975, df=len(data_with_fs)-1)\n",
+    "ci = t_score * se\n",
+    "\n",
+    "# Print result as \"mean ± ci\"\n",
+    "print(f\"Mean ± CI: {mean:.3f} ± {ci:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean ± CI: 0.101 ± 0.011\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_without = np.array([0.1, 0.09, 0.13, 0.12, 0.1, 0.09, 0.10, 0.08])\n",
+    "\n",
+    "# Compute mean and standard error\n",
+    "mean = np.mean(data_without)\n",
+    "std = np.std(data_without, ddof=1)\n",
+    "se = std / np.sqrt(len(data_without))\n",
+    "\n",
+    "# Compute 95% confidence interval\n",
+    "z_score = st.norm.ppf(0.975)  # 1.96 for 95% confidence interval\n",
+    "ci = z_score * se\n",
+    "\n",
+    "# Print result as \"mean ± ci\"\n",
+    "print(f\"Mean ± CI: {mean:.3f} ± {ci:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
